--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.544.0",
     "motion": "^12.23.24",
     "next-themes": "^0.4.6",
+    "nitro": "^3.0.1-alpha.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-use-measure": "^2.1.7",
